--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "SIAA Data Extractor",
     "version": "1.1.0",
-    "description": "Extração e visualização avançada de dados acadêmicos do SIAA - Cruzeiro do Sul. Interface responsiva, filtros dinâmicos, busca inteligente e headers fixos.",
+    "description": "Extração e visualização de dados acadêmicos do SIAA - Cruzeiro do Sul. Interface responsiva com filtros e busca inteligente.",
     "permissions": [
         "activeTab",
         "storage",
