Implementa melhorias na extensão SIAA Data Extractor, incluindo a adição de um sistema de mapeamento de cursos, tratamento de erros aprimorado e novos logs para facilitar a depuração. A interface foi atualizada com novos avisos e botões para gerenciamento de dados, além de otimizações na comunicação entre scripts. A documentação foi revisada para refletir as mudanças e todos os arquivos estão prontos para submissão na Chrome Web Store.

--- a/manifest.json
+++ b/manifest.json
@@ -41,7 +41,7 @@
     },
     "web_accessible_resources": [
         {
-            "resources": ["injected.js", "viewer.html", "viewer.js"],
+            "resources": ["injected.js", "viewer.html", "viewer.js", "siaa-config.json", "xml-processor.js", "config-manager.js"],
             "matches": ["https://siaa.cruzeirodosul.edu.br/*", "<all_urls>"]
         }
     ]
