Atualiza a extensão SIAA Data Extractor para a versão 2.0.5, introduzindo a modularização do código com a implementação de novas classes: ExtractionManager, DataDeduplicationHelper, MessageHandler e TabManager. Melhora a estrutura do popup com a adição do StateManager e CommunicationManager, centralizando o gerenciamento de estado e comunicação. A interface foi aprimorada com feedback visual e novos estilos, garantindo uma experiência de usuário mais fluida. Todos os arquivos estão prontos para submissão na Chrome Web Store.

--- a/manifest.json
+++ b/manifest.json
@@ -41,7 +41,19 @@
     },
     "web_accessible_resources": [
         {
-            "resources": ["injected.js", "viewer.html", "viewer.js", "siaa-config.json", "xml-processor.js", "config-manager.js"],
+            "resources": [
+                "injected.js", 
+                "viewer.html", 
+                "viewer.js", 
+                "siaa-config.json", 
+                "xml-processor.js", 
+                "config-manager.js",
+                "src/utils/CSVParser.js",
+                "src/utils/CSVDataHandler.js",
+                "src/background/ExtractionManager.js",
+                "src/background/MessageHandler.js",
+                "src/background/TabManager.js"
+            ],
             "matches": ["https://siaa.cruzeirodosul.edu.br/*", "<all_urls>"]
         }
     ]
