Remove arquivos obsoletos e refatora a estrutura do projeto SIAA Data Extractor, incluindo a exclusão do arquivo popup_pre_diagnostico.js e a atualização do manifest.json para incluir apenas arquivos necessários. Melhora a interface do popup e do visualizador com a implementação de variáveis CSS centralizadas, garantindo consistência visual. A documentação foi atualizada para refletir as mudanças e todos os arquivos estão prontos para submissão na Chrome Web Store.

--- a/manifest.json
+++ b/manifest.json
@@ -47,12 +47,7 @@
                 "viewer.js", 
                 "siaa-config.json", 
                 "xml-processor.js", 
-                "config-manager.js",
-                "src/utils/CSVParser.js",
-                "src/utils/CSVDataHandler.js",
-                "src/background/ExtractionManager.js",
-                "src/background/MessageHandler.js",
-                "src/background/TabManager.js"
+                "config-manager.js"
             ],
             "matches": ["https://siaa.cruzeirodosul.edu.br/*", "<all_urls>"]
         }
